--- a/app/views/layouts/_admin_left_sidebar.html.erb
+++ b/app/views/layouts/_admin_left_sidebar.html.erb
@@ -1,6 +1,10 @@
 <!-- Sidebar -->
 <div class="bg-light border-right" id="sidebar-wrapper">
-  <div class="sidebar-heading"><h4>Start Bootstrap </h4></div>
+  <div class="sidebar-heading">
+    <%= link_to root_path, class: "text-decoration-none text-dark" do %>
+      <h4>Golden Blog</h4>
+    <% end %>
+  </div>
   <div class="list-group list-group-flush">
     <%= link_to "Posts", admin_posts_path, class: "list-group-item list-group-item-action bg-light" %>
     <%= link_to "Categories", admin_categories_path, class: "list-group-item list-group-item-action bg-light" %>
