--- a/app/views/layouts/_admin_navbar.html.erb
+++ b/app/views/layouts/_admin_navbar.html.erb
@@ -14,7 +14,7 @@
         <%= link_to "Profile", profile_users_path(status: :new), class: "nav-link"%>
       </li>
       <li class="nav-item">
-        <%= link_to "Logout", logout_path, class: "nav-link"%>
+        <%= link_to "Logout", logout_path, method: :delete, class: "nav-link"%>
       </li>
     </ul>
   </div>
