--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -57,7 +57,7 @@
     <div class="mt-2 comment-input gray-border-top p-3 ">
       <%= form_for(:comment, url: post_comments_path(post), method: :post, remote: true, html: { class: "d-flex justify-content-center m-0 p-0"} ) do |f| %>
         <%= f.hidden_field :from_page, value: :index_controller  %>
-        <%= f.text_area :content, placeholder: "comment in here", class: "pr-2" %>
+        <%= f.text_area :content, placeholder: "Comment...", class: "pr-2" %>
         <%= f.submit "Send", class: "ml-auto comment-btn" %>
       <% end %>
     </div>
