--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row edit-profile-wrapper bg-white">
     <div class="col-md-3">
       <ul class="list-group list-group-flush mt-4">
