edit sidekiq scheduler config, edit some sync method logic

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -50,11 +50,16 @@
             <a class="text-decoration-none" disabled>
               <i class="ml-3 fa fa-comments fa-large text-dark"></i>
             </a>
-            <%= link_to '/', class: "text-decoration-none" do %>
+            <%= link_to @post, class: "share-btn text-decoration-none", data: { href: "https://secret-journey-76001.herokuapp.com/posts/#{@post.id}", id: @post.id } do %>
               <i class="ml-3 fa fa-share fa-large text-dark"></i>
             <% end %>
           </div>
-          <div class="post-likes fw-600 pl-3"><%= @post.likes.count %> likes</div>
+          <span class="post-likes fw-600 pl-3">
+            <%= @post.likes_counter + @post.social_likes_counter %> likes
+          </span>
+          <span class="post-shares fw-600 ml-2">
+            <%= @post.shares_counter + @post.social_shares_counter %> Shares
+          </span>
           <div class="text-secondary pl-3 pb-2">
             <small>
               <%= time_ago_in_words @post.created_at %> ago
