--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -27,7 +27,7 @@
       <%= link_to post, class: "comment-btn text-decoration-none" do %>
         <i class="ml-3 fa fa-comments fa-large text-dark"></i>
       <% end %>
-      <%= link_to post, class: "share-btn text-decoration-none", data: { href: "https://secret-journey-76001.herokuapp.com/posts/#{post.id}", id: post.id } do %>
+      <%= link_to post, class: "share-btn text-decoration-none", data: { href: post_url(post), id: post.id } do %>
         <i class="ml-3 fa fa-share fa-large text-dark"></i>
       <% end %>
 
@@ -41,6 +41,8 @@
           <% if post.content.length > 100 %>
             <%= "#{post.content[0..100]}..." %>
             <%= link_to "See more", post_path(post) %>
+          <% else %>
+            <%= post.content %>
           <% end %>
         </span>
       </div>
